Add `eslint-plugin-jsdoc` to docs

--- a/packages/nodecode-docs/docs/guide-node-user/basics.mdx
+++ b/packages/nodecode-docs/docs/guide-node-user/basics.mdx
@@ -123,3 +123,4 @@ The fields that make up a node and other information are defined in JSON format.
 - Source code for node function
 - JSON for fields
 - One of the most common fields is the **Input-Output-Field**
+- Current state of development
