--- a/packages/nodecode-docs/docs/user-guide/basics.mdx
+++ b/packages/nodecode-docs/docs/user-guide/basics.mdx
@@ -5,7 +5,7 @@ sidebar_position: 1
 # Basics
 
 
-## Node programs
+## Node Programs
 
 A **node program** consists of nodes and connections. Each node can have input and output
 sockets. Every input socket can have a connection that represents data flow into the node.
